Changed Drop to use position:absolute relative to the <body> element instead of position:fixed. Fixes issues on mobile browsers.

--- a/src/scss/grommet-core/_objects.drop.scss
+++ b/src/scss/grommet-core/_objects.drop.scss
@@ -1,7 +1,7 @@
 // (C) Copyright 2014 Hewlett Packard Enterprise Development LP
 
 .grommet.drop {
-  position: fixed;
+  position: absolute;
   z-index: 20;
   border-radius: $border-radius;
   overflow: auto;
